# blog

./: .gitignore  Eric_Seidel_CV.yaml  Makefile  Procfile  README.md  blog.cabal  blog.nix  default.nix  stack.yaml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  update-lts.yml
docs/: 404.html  CNAME  feed.xml  index.html
docs/css/: bootstrap.css  code.css  style.css
docs/posts/: index.html
docs/posts/3252-minutes-in-fluidinfo/: index.html
docs/posts/abusing-compiler-plugins/: index.html
docs/posts/fixing-my-feed/: index.html
docs/posts/fluidcv/: index.html
docs/posts/fluidcv-pre-alpha/: index.html
docs/posts/fluidinfo-oreilly-competition/: index.html
docs/posts/geektool-bowtie/: index.html
docs/posts/getcomponents/: index.html
docs/posts/matlab/: index.html
docs/posts/strong-type-systems/: index.html
docs/publications/: index.html
resources/nginx/: blog
resources/posts/: 3252-minutes-in-fluidinfo.md  abusing-compiler-plugins.md  fixing-my-feed.md  fluidcv-pre-alpha.md  fluidcv.md  fluidinfo-oreilly-competition.md  geektool-bowtie.md  getcomponents.md  matlab.md  strong-type-systems.lhs
resources/static/css/: bootstrap.css  bootstrap.min.css
resources/upstart/: blog.conf
src/: Application.hs  Feed.hs  Main.hs  Post.hs  Site.hs  View.hs
