Name:                blog
Version:             0.1
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             BSD3
Author:              Eric Seidel
Maintainer:          gridaphobe@gmail.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.10

Executable blog
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    base >= 4 && < 5,
    blaze-html,
    blaze-markup,
    containers,
    clay,
    directory,
    filepath,
    hakyll >= 4.13.0.0,
    mtl,
    pandoc,
    pandoc-types,
    scotty,
    skylighting,
    text,
    time,
    transformers,
    unix,
    wai-extra,
    wai-middleware-static
