Name:                blog
Version:             0.1
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             BSD3
Author:              Eric Seidel
Maintainer:          gridaphobe@gmail.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.10

Executable blog
  hs-source-dirs: src
  main-is: Main.hs
  other-modules: Feed Post View

  ghc-options: -Wunused-imports -Wunused-packages

  Build-depends:
    base >= 4 && < 5,
    blaze-html,
    blaze-markup,
    containers,
    clay,
    directory,
    filepath,
    hakyll,
    pandoc,
    skylighting,
    text,
    time